BusOne02/src/objects/Call2_Key_Message_vod__c.object
<CustomObject>
    <description>This object stores all Key Messages recorded on a call</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account for the source of the call. Each key message is associated with a call.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Key Messages(Accounts)</relationshipLabel>
        <relationshipName>Call2_Key_Message_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>The type of entity who the call key message is created for. This field is used in reporting. For performance reasons, this is not set by an APEX trigger. For data import, this field should be set correctly otherwise reports that depend on this field may not run correctly.</description>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Contact_vod</fullName>
                </value>
                <value>
                    <fullName>Person_Account_vod</fullName>
                </value>
                <value>
                    <fullName>User_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_ID_vod__c</fullName>
        <description>Closed Loop Marketing slide Id.</description>
        <label>CLM ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>Lookup to the call. Each key message is associated with a call.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Call Key Messages</relationshipLabel>
        <relationshipName>Call2_Key_Message_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The date of the call it was recorded for.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category_vod__c</fullName>
        <description>Records the message category of the message. Used primarily for reporting.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Efficacy</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Tolerability</fullName>
                </value>
                <value>
                    <fullName>Efficiencies</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clm_Presentation_Name_vod__c</fullName>
        <description>Stamped CLM Presentation name</description>
        <label>CLM Presentation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clm_Presentation_Version_vod__c</fullName>
        <description>Version of the Presentation</description>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clm_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the CLM Presentation</description>
        <label>CLM Presentation</label>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipLabel>Call Key Messages</relationshipLabel>
        <relationshipName>Call_Key_Messages_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact for the source of the call. Each key message is associated with a call.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Key Messages(Contacts)</relationshipLabel>
        <relationshipName>Call2_Key_Message_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Key Messages (Detail Group)</relationshipLabel>
        <relationshipName>Call2_Key_Messages_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>The display order of CLM Messages presented on a call.  This only takes into account CLM type key messages.</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_vod__c</fullName>
        <description>Duration of the visit to the slide. From Exploria, the value is in ticks (10,000,000 ticks = 1 second). Otherwise, the value is in seconds.</description>
        <label>Duration</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>This Veeva field ensures proper synchronization even after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_KM_Id_vod__c</fullName>
        <description>For Internal Use Only. Utilized to maintain relationship to Key Message during sync.</description>
        <label>Entity Reference KM Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call Key Message record is part of the Parent Call or of an Attendee Call record.  1 indicates that the record is associated with the Parent Call.  0 indicates that it is associated with an Attendee Call.</description>
        <formula>IF(LEN(Call2_vod__r.Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Message_Name_vod__c</fullName>
        <description>Stamped Key Message name</description>
        <label>Key Message Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Key Message template. Key Messages are created based on Key Message Templates.</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Call Key Messages</relationshipLabel>
        <relationshipName>Call2_Key_Message_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_ID_vod__c</fullName>
        <description>Value is the CLM presentation Id concatenated with the Internal Name, separated by ::.</description>
        <label>Presentation ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product catalog for the product associated with the key message.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Key Messages</relationshipLabel>
        <relationshipName>Call_Key_Messages_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reaction_vod__c</fullName>
        <description>Picklist of reaction to the message. Edit the picklist to change the reaction values.</description>
        <label>Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_vod__c</fullName>
        <description>Holds the segment of the Account to which this Call Key Message was delivered</description>
        <label>Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slide_Version_vod__c</fullName>
        <description>Version of this slide.</description>
        <label>Slide Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start Time when the slide was visited.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user for the source of the call. Each key message is associated with a call.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N6A00000GemM0UAJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_vod__c</fullName>
        <description>Master list of all the Key Message vehicles used. Used to record what collateral is used to deliver the Key Message.</description>
        <label>Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MVA</fullName>
                </value>
                <value>
                    <fullName>Scionti reprint</fullName>
                </value>
                <value>
                    <fullName>Schlegel reprint</fullName>
                </value>
                <value>
                    <fullName>Urology Times Article</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Key Message</label>
    <nameField>
        <displayFormat>CMT{00000000}</displayFormat>
        <label>Key Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Key Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>